// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`expands full arguments and word changes, then collapses > expanded 1`] = `
"tapediff · behavior differs · side by side
a: baseline → b: candidate
tool_call weather                                │ tool_call weather
{                                                │ {
  "city": "Paris",                               │   "city": "Tokyo",
  "units": "C"                                   │   "units": "C"
}                                                │ }
Word diff: tool_call weather
{
  "city": "[-Paris-]{+Tokyo+}",
  "units": "C"
}

3/6 · all steps · expanded · lines 1-10/10
a: 1 calls · 120 tok · $0.0010 · 500ms
b: 1 calls · 120 tok · $0.0010 · 500ms
↑↓/jk scroll · PgUp/PgDn · g/G top/bottom · n/N diff
Enter expand/collapse · / or d differences · q/Esc quit"
`;

exports[`handles empty and identical filtered views > no differences 1`] = `
"tapediff · identical behavior · side by side
a: a → b: b
No differences
















0/0 · differences only
a: 1 calls · 120 tok · $0.0010 · 500ms
b: 1 calls · 120 tok · $0.0010 · 500ms
↑↓/jk move · PgUp/PgDn · g/G top/bottom · n/N diff
Enter expand/collapse · / or d differences · q/Esc quit"
`;

exports[`jumps to next/previous differences with wraparound and toggles both filter keys > filtered 1`] = `
"tapediff · behavior differs · side by side
a: baseline → b: candidate
  1 ~ input user "Weather in Paris?"             │   1 ~ input user "Weather in Tokyo?"
  3 ~ tool_call weather {"city":"Paris","units"… │   3 ~ tool_call weather {"city":"Tokyo","units":…
› 6 + (absent)                                   │ › 6 + error 500: Oops








3/3 · differences only
a: 1 calls · 120 tok · $0.0010 · 500ms
b: 1 calls · 120 tok · $0.0010 · 500ms
↑↓/jk move · PgUp/PgDn · g/G top/bottom · n/N diff
Enter expand/collapse · / or d differences · q/Esc quit"
`;

exports[`renders aligned panes and navigates arrows, j/k, pages, and boundaries > bottom 1`] = `
"tapediff · behavior differs · side by side
a: baseline → b: candidate
  4   tool_result weather "Sunny"                │   4   tool_result weather "Sunny"
  5   text "It is sunny."                        │   5   text "It is sunny."
› 6 + (absent)                                   │ › 6 + error 500: Oops
6/6 · all steps
a: 1 calls · 120 tok · $0.0010 · 500ms
b: 1 calls · 120 tok · $0.0010 · 500ms
↑↓/jk move · PgUp/PgDn · g/G top/bottom · n/N diff
Enter expand/collapse · / or d differences · q/Esc quit"
`;

exports[`renders aligned panes and navigates arrows, j/k, pages, and boundaries > wide 1`] = `
"tapediff · behavior differs · side by side
a: baseline → b: candidate
› 1 ~ input user "Weather in Paris?"             │ › 1 ~ input user "Weather in Tokyo?"
  2   llm_call gpt-4.1 · HTTP 200                │   2   llm_call gpt-4.1 · HTTP 200
  3 ~ tool_call weather {"city":"Paris","units"… │   3 ~ tool_call weather {"city":"Tokyo","units":…
1/6 · all steps
a: 1 calls · 120 tok · $0.0010 · 500ms
b: 1 calls · 120 tok · $0.0010 · 500ms
↑↓/jk move · PgUp/PgDn · g/G top/bottom · n/N diff
Enter expand/collapse · / or d differences · q/Esc quit"
`;

exports[`stacks narrow terminals and responds to live resize > narrow 1`] = `
"tapediff · behavior differs · stacked
a: baseline → b: candidate
› 1 ~ a: input user "Weather in Paris?"
› 1 ~ b: input user "Weather in Tokyo?"
  2   a: llm_call gpt-4.1 · HTTP 200
  2   b: llm_call gpt-4.1 · HTTP 200
  3 ~ a: tool_call weather {"city":"Paris","units":"C"}
  3 ~ b: tool_call weather {"city":"Tokyo","units":"C"}
  4   a: tool_result weather "Sunny"
  4   b: tool_result weather "Sunny"
  5   a: text "It is sunny."
  5   b: text "It is sunny."

1/6 · all steps
a: 1 calls · 120 tok · $0.0010 · 500ms
b: 1 calls · 120 tok · $0.0010 · 500ms
↑↓/jk move · PgUp/PgDn · g/G top/bottom · n/N diff
Enter expand/collapse · / or d differences · q/Esc quit"
`;
